examples/type_system/failing/110_call_arg_named_fn.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn greet(name: String) -> String {
    name
}

fn main() -> Unit {
    let _x = greet(42)
}
